🐛 styles: fix z-index: display: grid overflows fixed position without pre-defined z-index

--- a/src/components/dashboard/nvagation-bar/navigation-bar.scss
+++ b/src/components/dashboard/nvagation-bar/navigation-bar.scss
@@ -5,7 +5,7 @@ $expandedWidth: 300px;
 
 nav {
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: $headerHeight;
     left: 0;
     bottom: 0;
