--- a/src/styles/typography.page.scss
+++ b/src/styles/typography.page.scss
@@ -26,6 +26,7 @@
     font-size: 36px;
     font-weight: 400;
     box-shadow: none;
+    z-index: 1;
 }
 
 .page-sub-title {
